Wrote up the Readme file of the project, made a couple of minor formatting tweaks to some Jupyter Notebooks.

--- a/Predictive-Models/Model_Pipeline.ipynb
+++ b/Predictive-Models/Model_Pipeline.ipynb
@@ -17,15 +17,13 @@
     "# Conducting preliminary steps such as importing modules and reading in the data.\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import pickle\n",
-    "import gc\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import LabelEncoder, QuantileTransformer\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.pipeline import Pipeline, FeatureUnion\n",
-    "from sklearn.metrics import recall_score, precision_score, f1_score, multilabel_confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import recall_score, precision_score, f1_score, multilabel_confusion_matrix\n",
     "\n",
     "# Data is imported and split, with the target variable being numerically encoded.\n",
     "model_df = pd.read_csv('../Data/model_data.csv', index_col = 0)\n",
