--- a/Predictive-Models/Principal_Component_Analysis.ipynb
+++ b/Predictive-Models/Principal_Component_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
     "from sklearn.preprocessing import QuantileTransformer, StandardScaler\n",
     "\n",
     "model_df = pd.read_csv('../Data/model_data.csv', index_col = 0)\n",
-    "model_df = model_df.drop(['industry', 'office'], axis = 1)\n",
-    "df_columns = model_df.columns"
+    "X = model_df.drop(['industry', 'office'], axis = 1)\n",
+    "df_columns = X.columns"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.4247328  0.19168612 0.13375259 0.09989484 0.07894924 0.04095953\n",
-      " 0.01771478 0.01231008]\n",
+      "[0.42502874 0.19123835 0.13394252 0.0999914  0.0791696  0.04079046\n",
+      " 0.01779352 0.01204541]\n",
       "['current_ratio' 'operating_cash_flow' 'debt_to_equity'\n",
       " 'interest_coverage' 'operating_margin' 'return_on_assets'\n",
       " 'return_on_equity' 'has_interest_payments']\n"
